@@ -1935,14 +1935,19 @@ unspecified elements into a completed to-pathname based on the to-wildname."
                     :directory enough-directory
                     :name (pathname-name pathname)
                     :type (pathname-type pathname)
-                    :version (pathname-version pathname)))))
+                    :version (pathname-version pathname))
+     (eql (pathname-host pathname) (pathname-host defaults)))))
 
-(defun unparse-logical-namestring (pathname)
+(defun unparse-logical-namestring (pathname &optional elide-host)
   (declare (type logical-pathname pathname))
-  (concatenate 'simple-string
-               (logical-host-name (%pathname-host pathname)) ":"
-               (unparse-logical-directory pathname)
-               (unparse-logical-file pathname)))
+  (let ((directory (unparse-logical-directory pathname))
+        (file (unparse-logical-file pathname)))
+    (cond
+      (elide-host (concatenate 'simple-string directory file))
+      (t (concatenate 'simple-string
+                      (logical-host-name (%pathname-host pathname)) ":"
+                      directory
+                      file)))))
 
 ;;;; logical pathname translations
 
